--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,8 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.2'
 
-
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.16'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.json:json:20171018'
